--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "mocha": "^1.21.4",
         "grunt-cli": "^0.1.13",
+        "chai": "^1.9.1",
         "load-grunt-tasks": "^0.6.0",
         "grunt-contrib-requirejs": "^0.4.4",
         "grunt-contrib-imagemin": "^0.8.1",
@@ -29,7 +30,8 @@
         "grunt-preprocess": "^4.0.0",
         "grunt-istanbul": "^0.2.4",
         "grunt-jsonlint": "^1.0.4",
-        "grunt-jscs": "^0.6.1"
+        "grunt-jscs": "^0.6.1",
+        "sinon": "^1.10.3"
     },
     "scripts": {
         "test": "phantomjs test/vendor/runner.js test/index.html?noglobals=true && coffee test/model.coffee"
