--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ node_modules
 
 ### Bower dependency directory ###
 src/public/src/bower_components
+bower_components
 !/.bowerrc
 
 ### Build output directory ###
